# mypy-htmlreport-isadirectoryerror

./: .gitignore  README.adoc  mypy.ini  pyproject.toml
folder/: main.py
folder/subfolder/: something.py
