[tool.poetry]
name = "mypy_bug"
version = "0.1.0"
description = ""
authors = ["Evgeny Arshinov <earshinov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
lxml = "^4.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
